# pythagoras

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pythagoras.angle.html  pythagoras.arrow.html  pythagoras.backend.html  pythagoras.canvas.html  pythagoras.circle.html  pythagoras.curve.html  pythagoras.html  pythagoras.label.html  pythagoras.line.html  pythagoras.pobject.html  pythagoras.prelude.html  pythagoras.r3.camera.html  pythagoras.r3.canvas.html  pythagoras.r3.curve.html  pythagoras.r3.html  pythagoras.r3.mesh.html  pythagoras.r3.parametric.html  pythagoras.r3.pobject.html  pythagoras.r3.rendering.html  pythagoras.r3.sphere.html  pythagoras.r3.vector.html  pythagoras.shape.html  pythagoras.style.color.html  pythagoras.style.draw.html  pythagoras.style.html  pythagoras.style.line.html  pythagoras.style.opacity.html  pythagoras.utils.html  pythagoras.vector.html  (+4 more)
_modules/: index.html
_sources/: index.rst.txt  modules.rst.txt  pythagoras.angle.rst.txt  pythagoras.arrow.rst.txt  pythagoras.backend.rst.txt  pythagoras.canvas.rst.txt  pythagoras.circle.rst.txt  pythagoras.curve.rst.txt  pythagoras.label.rst.txt  pythagoras.line.rst.txt  pythagoras.pobject.rst.txt  pythagoras.prelude.rst.txt  pythagoras.r3.camera.rst.txt  pythagoras.r3.canvas.rst.txt  pythagoras.r3.curve.rst.txt  pythagoras.r3.mesh.rst.txt  pythagoras.r3.parametric.rst.txt  pythagoras.r3.pobject.rst.txt  pythagoras.r3.rendering.rst.txt  pythagoras.r3.rst.txt  pythagoras.r3.sphere.rst.txt  (+10 more)
(+82 files in other folders)
