[project]
name = "pythagoras"
version = "0.1.0"
authors = [
  { name="Henry Díaz Bordón", email="henrydiazbordon@gmail.com" },
]
description = "Python drawing package which exports to TikZ and SVG"
dependencies = ["latex2mathml>=3.81.0"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/h3nry-d1az/pythagoras"
Issues = "https://github.com/h3nry-d1az/pythagoras/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
fix = true
output-format = "concise"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "migrations",
]
isort.split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.ty.rules]
all = "error"